--- a/Kopie_von_MS_StyleGAN2_ada_pytorch.ipynb
+++ b/Kopie_von_MS_StyleGAN2_ada_pytorch.ipynb
@@ -7,7 +7,7 @@
       "name": "Kopie von MS_StyleGAN2-ada-pytorch.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtLiG9Qorp7fB3LWH+N/o5",
+      "authorship_tag": "ABX9TyNA083irOgZnW98/6eY1lyx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,7 @@
       },
       "source": [
         "# clone sg2\n",
-        "!pip install ninja wandb\n",
+        "!pip install ninja \n",
         "!git clone https://github.com/maschere/stylegan2-ada-pytorch.git\n",
         "%cd stylegan2-ada-pytorch/"
       ],
@@ -85,7 +85,7 @@
         "id": "jbuZJLg7Ht0P"
       },
       "source": [
-        "!python dataset_tool.py --source=path to images --dest=images.zip --channels=4"
+        "!python dataset_tool.py --source=path to images --dest=images.zip --channels=4 --width=1024 --height=1024"
       ],
       "execution_count": null,
       "outputs": []
@@ -96,7 +96,7 @@
         "id": "WPasxihPISHa"
       },
       "source": [
-        "!python train.py --outdir=\"/content/drive/MyDrive/Colab Notebooks/run_data\" --data=tokens.zip --mirror=1 --cfg=\"11gb-gpu\" --augpipe=bg --snap=11 --kimg=1000 --workers=2 --cond=0 --nobench=True --metrics=none --resume=\"finetune.pkl\""
+        "!python train.py --outdir=\"/content/drive/MyDrive/Colab Notebooks/run_data\" --data=images.zip --mirror=1 --cfg=\"11gb-gpu\" --augpipe=bg --snap=11 --kimg=1000 --workers=2 --cond=0 --nobench=True --metrics=none --resume=\"ffhq.pkl\""
       ],
       "execution_count": null,
       "outputs": []
