--- a/Kopie_von_MS_StyleGAN2_ada_pytorch.ipynb
+++ b/Kopie_von_MS_StyleGAN2_ada_pytorch.ipynb
@@ -7,7 +7,7 @@
       "name": "Kopie von MS_StyleGAN2-ada-pytorch.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNA083irOgZnW98/6eY1lyx",
+      "authorship_tag": "ABX9TyNxBQr0JaEk8pkCpJdsl0yf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/maschere/stylegan2-ada-pytorch/blob/main/Kopie_von_MS_StyleGAN2_ada_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p6kGp1BWUjRJ"
+      },
+      "source": [
+        "!pip install torch==1.7.1 torchvision==0.8.2 ninja"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -61,7 +72,6 @@
       },
       "source": [
         "# clone sg2\n",
-        "!pip install ninja \n",
         "!git clone https://github.com/maschere/stylegan2-ada-pytorch.git\n",
         "%cd stylegan2-ada-pytorch/"
       ],
